# regressao_linear

./: Cargo.toml  README.md
benches/: benchmarks.rs
examples/: analise_completa.rs  exemplo_basico.rs
src/: lib.rs  main.rs
test/: lib.rs
